--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.error.include-message=always
 spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=[authentication_database]
