--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.data.mongodb.authentication-database=[authentication_database]
 spring.data.mongodb.username=""
 spring.data.mongodb.password=""
 spring.data.mongodb.database=miniTwitter
+spring.cache.type=redis
+spring.data.redis.repositories.enabled=true
+spring.redis.database=0
+spring.redis.port=6379
+spring.redis.timeout=60000
